--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: Tharunaditya/tharunaditya.github.io
   branch: main
 
 media_folder: "assets/images/uploads"
