--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: Tharunaditya/tharunaditya.github.io
   branch: main
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
