Maintenance Check: Disabling Blog

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ social:
     - https://instagram.com/adityaanuganti
 
 # Blog Settings
-enable_blog: true
+enable_blog: false
 paginate: 10
 paginate_path: "/blog/page:num/"
 
