CHORE: Clean up repository
- Updated .gitignore to exclude maintenance scripts and documentation artifacts
- Removed tracked clutter files (kept locally)

Files removed from tracking: *.py, *GUIDE.md, *CHECKLIST.md, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,18 @@ node_modules/
 
 # Draft posts (optional)
 _drafts/
+
+# Maintenance Scripts & Docs
+*.py
+*_GUIDE.md
+*_SETUP.md
+*_CHECKLIST.md
+*_REPORT.md
+CODE_SUMMARY.md
+DIRECTORY_STRUCTURE.txt
+VERSION_COMPARISON.md
+test-buttons.html
+update_*.py
+append_*.py
+check_*.py
+fix_*.py
