--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ paginate_path: "/blog/page:num/"
 
 # Build Settings
 markdown: kramdown
+future: true
 permalink: /blog/:year/:month/:day/:slug/
 timezone: Asia/Kolkata
 
